--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__/
 
 # Pasta de instância do Flask (onde o BD pode ficar)
 instance/
+static/uploads/
 
 # Arquivos de configuração de IDEs comuns
 .vscode/
