--- a/static/manifest.json
+++ b/static/manifest.json
@@ -4,5 +4,19 @@
     "start_url":"/",
     "display":"standalone",
     "background_color":"#1B1C1D",
-    "theme_color":"#1B1C1D"
+    "theme_color":"#1B1C1D",
+    "icons":[
+        {
+            "src":"/static/images/icons/icon-192x192.png",
+            "sizes":"192x192",
+            "type":"image/png",
+            "purpose":"maskable"
+        },
+        {
+            "src":"/static/images/icons/icon-512x512.png",
+            "sizes":"512x512",
+            "type":"image/png",
+            "purpose":"maskable"
+        }
+    ]
 }
