--- a/static/manifest.json
+++ b/static/manifest.json
@@ -10,13 +10,13 @@
             "src":"/static/images/icons/icon-192x192.png",
             "sizes":"192x192",
             "type":"image/png",
-            "purpose":"maskable"
+            "purpose":"any maskable"
         },
         {
             "src":"/static/images/icons/icon-512x512.png",
             "sizes":"512x512",
             "type":"image/png",
-            "purpose":"maskable"
+            "purpose":"any maskable"
         }
     ]
 }
